# blog-api

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  database.py  main.py  models.py  mypy.ini  pyproject.toml  schemas.py  setup.cfg  sql_app.db  tox.ini
.github/workflows/: ci.yaml  push.yaml
sql_app/: crud.py  database.py  main.py  middleware.py  models.py  schemas.py
tests/: dummy_test.py
