[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = "A documentation-first REST API in Python"
authors = ["Samwel Kanda"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
